Added todo checks to map setups, replaced String#format with #formatted.