@@ -31,13 +31,13 @@ public class SetSpawnCmd extends Cmd {
 
         GameTemplate template = world.getTemplate();
         if (!world.isEditing()) {
-            sender.sendMessage(plugin.getUtils().colorize(String.format("&cYou are currently in a skywars game world for the arena &7%s&c that is not in editing mode. Use \"&c&o/swmap edit %s&c\" to edit this template.", template.getDisplayName(), template.getName())));
+            sender.sendMessage(plugin.getUtils().colorize("&cYou are currently in a skywars game world for the arena &7%s&c that is not in editing mode. Use \"&c&o/swmap edit %s&c\" to edit this template.".formatted(template.getDisplayName(), template.getName())));
             return true;
         }
 
         SpawnType type = SpawnType.fromString(args[0]);
         if (type == null) {
-            sender.sendMessage(plugin.getUtils().colorize(String.format("&cPlease enter a valid spawn type. Options: &7%s&f, &7%s&f, &7%s", "player", "lobby", "spectate")));
+            sender.sendMessage(plugin.getUtils().colorize("&cPlease enter a valid spawn type. Options: &7%s&f, &7%s&f, &7%s".formatted("player", "lobby", "spectate")));
             return true;
         }
         int team = 1;
@@ -60,7 +60,7 @@ public class SetSpawnCmd extends Cmd {
                     // player entered a team number.
                     player.sendTitle(plugin.getUtils().colorize("&c&lNOT A TEAM GAME!"), plugin.getUtils().colorize("&7You can only set team spawns for team games"));
                     sender.sendMessage(plugin.getUtils().colorize("&7Not a team game template!&c You are currently editing a solo game template (with team size 1) which doesn't support adding a spawn to a specific team. If you wish to" +
-                            " make this template a team arena, please use the command \"&o/swmap teamsize " + template.getName() + " <size>&r&c\"."));
+                            " make this template a team arena, please use the command \"&o/swmap teamsize %s <size>&r&c\".".formatted(template.getName())));
                     return true;
                 }
             }
@@ -73,34 +73,34 @@ public class SetSpawnCmd extends Cmd {
             case LOBBY -> {
                 template.setWaitingLobbySpawn(location);
                 player.sendTitle(plugin.getUtils().colorize("&a&lSPAWN SET!"), plugin.getUtils().colorize("&7Successfully set the waiting lobby spawnpoint!"));
-                sender.sendMessage(plugin.getUtils().colorize(String.format("&aThe waiting spawn of the template &b%s &ahas been set to your current location.", template.getDisplayName())));
+                sender.sendMessage(plugin.getUtils().colorize("&aThe waiting spawn of the template &b%s &ahas been set to your current location.".formatted(template.getDisplayName())));
             }
             case SPECTATE -> {
                 template.setSpectateSpawn(location);
                 player.sendTitle(plugin.getUtils().colorize("&a&lSPAWN SET!"), plugin.getUtils().colorize("&7Successfully set the spectator spawnpoint!"));
-                sender.sendMessage(plugin.getUtils().colorize(String.format("&aThe spectator spawn of the template &b%s &ahas been set to your current location.", template.getDisplayName())));
+                sender.sendMessage(plugin.getUtils().colorize("&aThe spectator spawn of the template &b%s &ahas been set to your current location.".formatted(template.getDisplayName())));
             }
             case PLAYER -> {
                 final SWCoord blockLocation = location.asBlock();
                 SpawnAddResult result = template.addSpawn(teamIndex, blockLocation);
                 String message = switch (result) {
                     case INDEX_TOO_LOW -> "&cPlease enter a valid team number (greater than 0)";
-                    case INDEX_TOO_HIGH -> String.format("&cPlease enter a valid team number (max %d)", template.getTeamSpawnpoints().size() + 1);
+                    case INDEX_TOO_HIGH -> "&cPlease enter a valid team number (max %d)".formatted(template.getTeamSpawnpoints().size() + 1);
                     case SPAWN_ALREADY_EXISTS -> "&cThe location you're trying to set is already defined for another team.";
                     case NEW_TEAM_ADDED -> {
                         if (template.getTeamSize() == 1) {
-                            yield String.format("&aAdded player spawnpoint &b#%d &ato game template &b%s&a.", template.getTeamSpawnpoints().size(), template.getDisplayName());
+                            yield "&aAdded player spawnpoint &b#%d &ato game template &b%s&a.".formatted(template.getTeamSpawnpoints().size(), template.getDisplayName());
                         } else {
                             int currentSpawns = template.getTeamSpawnpoints().get(teamIndex).size();
                             if (currentSpawns < template.getTeamSize()) {
-                                yield String.format("&aAdded player spawnpoint &b#%d &ato team &b%d &afor game template &b%s&a. &e%d &aspawns left to set for this team.", currentSpawns, team, template.getDisplayName(), template.getTeamSize() - currentSpawns);
+                                yield "&aAdded player spawnpoint &b#%d &ato team &b%d &afor game template &b%s&a. &e%d &aspawns left to set for this team.".formatted(currentSpawns, team, template.getDisplayName(), template.getTeamSize() - currentSpawns);
                             } else {
-                                yield String.format("&aAdded the final player spawnpoint &b#%d &ato team &b%d &afor game template &b%s&a. &e0 &aleft to go.", currentSpawns, team, template.getDisplayName());
+                                yield "&aAdded the final player spawnpoint &b#%d &ato team &b%d &afor game template &b%s&a. &e0 &aleft to go.".formatted(currentSpawns, team, template.getDisplayName());
                             }
                         }
                     }
-                    case TEAM_UPDATED -> String.format("&aAdded player spawnpoint &b#%d &ato team &b%d &afor game template &b%s&a.", template.getTeamSpawnpoints().get(team - 1).size(), team, template.getDisplayName());
-                    case MAX_TEAM_SPAWNS_REACHED -> String.format("&cTeam %d has reached its maximum player spawnpoints. You could increase the team size of this template with \"&o/swmap teamsize %s <size>&c\" if you wish to proceed.", team, template.getName());
+                    case TEAM_UPDATED -> "&aAdded player spawnpoint &b#%d &ato team &b%d &afor game template &b%s&a.".formatted(template.getTeamSpawnpoints().get(team - 1).size(), team, template.getDisplayName());
+                    case MAX_TEAM_SPAWNS_REACHED -> "&cTeam %d has reached its maximum player spawnpoints. You could increase the team size of this template with \"&o/swmap teamsize %s <size>&c\" if you wish to proceed.".formatted(team, template.getName());
                 };
 
                 if (result.isSuccess()) {
@@ -113,6 +113,7 @@ public class SetSpawnCmd extends Cmd {
             }
         }
 
+        template.checkToDoList(sender);
         return true;
     }
 
